# pysemu

./: .cruft.json  .editorconfig  .gitattributes  .gitignore  README.md  Taskfile.yml  cookiecutter-input.yaml  docker-compose.yaml  pyproject.toml  requirements-boot.in  setup.cfg
src/pysemu/: __init__.py  functions.py
src/pysemu/cli/: __init__.py  sub.py
tests/: test_something.py
